first version of introduction

--- a/wsc16paper.tex
+++ b/wsc16paper.tex
@@ -122,6 +122,40 @@ The Large Hadron Collider (LHC) at CERN in Geneva, Switzerland, is one of the la
 
 \section{INTRODUCTION}
 \label{sec:intro}
+High Energy Physics (HEP) strives to develop a detailed mathematical understanding of nature at the smallest elementary level. It’s science is based on the interplay between the theory framework that describes elementary particles and elementary forces between them; and the experimental detection of particles and measurements of their interactions. It calls for probing nature at ever increasing detail to unlock the last mysteries of our universe.
+
+The theory of particle physics is called the Standard Model and describes the universe through 12 particles and their anti-particles, and 4 fundamental forces represented by their own force particles. Particles are called fermions and have half-integer spins (one of fundamental properties or quantum numbers of particles) and respect the Pauli exclusion principle (not two particles can be identical in all their quantum numbers). There are 12 fermions, separated into 6 leptons (electron, electron neutrino, muon, muon neutrino, tau, tau neutrino), and 6 quarks (up, down, charm, strange, bottom, top). The hydrogen atom consists of an electron orbiting a proton, which consist of 2 up and 1 down quark.
+
+Force particles are bosons with integer spin and describe the fundamental forces: the electro-magnetic force represented by the photon, the weak force represented by the W and Z bosons, the strong force represented by the gluon, and gravitation which is the least known fundamental force and believed to be represented by the graviton, but this is not yet proven.
+
+The Standard Model uses the principles of Quantum Field Theory to mathematically describe particles and their interactions. Today, the Standard Model is very successful in describing matter and their interactions. It took many years and numerous experiments to develop and veify the theory. Although it is therotically self-consistent, it cannot describe gravitation, account for the accelerating expansion of the universe, and cannot incorporate that neutrinos have mass, as proved through the detection of neutrino oscillations. Therefore the field of particle physics is very active in understanding these topics and improve and enhance the Standard Model. The goal is to develop an all-encompassing theory.
+
+\section{SIMULATION}
+\label{sec:simulation}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Also called elementary particle physics, its experimental results are based on the analysis of many individual detector measurements in comparison to corresponding simulations that are based on the current understanding of the theory. Because of this, HEP was and is traditionally a very data intensive and trivially parallelizable science discipline.
+
 The LHC~\cite{1748-0221-3-08-S08001}
 
 \section*{ACKNOWLEDGMENTS}
