--- a/wsc16paper.tex
+++ b/wsc16paper.tex
@@ -177,6 +177,19 @@ Not all collisions of the 40 MHz collision rate are being recorded and saved for
 
 Simulations are used in all stages of designing and maintaining the trigger. Starting from the physics program, first and high level trigger selections are designed to maximize interesting events that have the potential to improve the Standard Model or find new physics not yet described by the Standard Model. These selections are then optimized to fit within the latencies of the trigger levels and the timing is checked. Constant feedback from the actual data recording is needed to improve the trigger simulation and the event selection for physics.
 
+\section{PHYSICS WITH THE CMS EXPERIMENT}
+\label{sec:computing}
+
+There are two main thrusts in particle physics, improving the Standard Model and its predictive power and finding physics that is not yet described by the Standard Model. The latter category of physics Beyond the Standard Model (BSM) would allow to solve question about the composition of the universe and the existence of the concept of the grand unified theory (GUT). It is known from cosmological observations that the universe consists only to about 4\% of ordinary matter as the Standard Model describes. About 20\% is assumed to be Dark Matter, matter that does not interact electr-magnetically, and about 75\% is assumed to be Dark Energy. Dark Matter particles would be invisible and therefore not detectable in particle physics detectors. But theories predict that at LHC collision energies, Dark Matter particles can be produced under certain circumstances and would manifest themselves in deviations from the Standard Model. The same is true for the concept of Supersymmetry, which doubles the elementary particles to give every particle its super-partner. Supersymmetry would solve the fine-tuning problem in the Standard Model and would also allow for all three forces, electr-magnetic, weak and strong, to unify at high energies and be described by the same simple mathematical construct. This would bring us closer to the Grand Unified Theory of particle physics. Supersymmetric particles would also be a good candidate for Dark Matter.
+
+In all cases the comparison of exeprimental observation to the preductions of the Standard Model are crucial to find deviations. These deviations can then be interpreted in the context of theoretical models like Dark Matter or Supersymmetry and probabilities can be assigned to deviation being compatible with certain theories.
+
+In the case of the Higgs Boson discovery in 2012, theory predicted a number of final states where the new particle was most likely to be found. One of them was the 4-lepton final state. Measuring 4-lepton events and indentifying and supressing as much as possible already known interactions predicted by the Standard Model, a peak was discovered that could not be explained by the Standard Model. But adding a Higgs Boson with a mass of about 125 GeV allowed the data to be described by the simulation. The statistical significance of the description exceeded 5 sigma and the signal qualified for the discovery of a Higgs Boson at 125 GeV. Simulations played a crucial role in this discovery.
+
+\section{The FUTURE: HIGH-LUMINOSITY LHC}
+\label{sec:hl-lhc}
+
+
 
 
 \section*{ACKNOWLEDGMENTS}
