upgrade section and summary

--- a/wsc16paper.tex
+++ b/wsc16paper.tex
@@ -178,7 +178,7 @@ Not all collisions of the 40 MHz collision rate are being recorded and saved for
 Simulations are used in all stages of designing and maintaining the trigger. Starting from the physics program, first and high level trigger selections are designed to maximize interesting events that have the potential to improve the Standard Model or find new physics not yet described by the Standard Model. These selections are then optimized to fit within the latencies of the trigger levels and the timing is checked. Constant feedback from the actual data recording is needed to improve the trigger simulation and the event selection for physics.
 
 \section{PHYSICS WITH THE CMS EXPERIMENT}
-\label{sec:computing}
+\label{sec:physics}
 
 There are two main thrusts in particle physics, improving the Standard Model and its predictive power and finding physics that is not yet described by the Standard Model. The latter category of physics Beyond the Standard Model (BSM) would allow to solve question about the composition of the universe and the existence of the concept of the grand unified theory (GUT). It is known from cosmological observations that the universe consists only to about 4\% of ordinary matter as the Standard Model describes. About 20\% is assumed to be Dark Matter, matter that does not interact electr-magnetically, and about 75\% is assumed to be Dark Energy. Dark Matter particles would be invisible and therefore not detectable in particle physics detectors. But theories predict that at LHC collision energies, Dark Matter particles can be produced under certain circumstances and would manifest themselves in deviations from the Standard Model. The same is true for the concept of Supersymmetry, which doubles the elementary particles to give every particle its super-partner. Supersymmetry would solve the fine-tuning problem in the Standard Model and would also allow for all three forces, electr-magnetic, weak and strong, to unify at high energies and be described by the same simple mathematical construct. This would bring us closer to the Grand Unified Theory of particle physics. Supersymmetric particles would also be a good candidate for Dark Matter.
 
@@ -186,10 +186,20 @@ In all cases the comparison of exeprimental observation to the preductions of th
 
 In the case of the Higgs Boson discovery in 2012, theory predicted a number of final states where the new particle was most likely to be found. One of them was the 4-lepton final state. Measuring 4-lepton events and indentifying and supressing as much as possible already known interactions predicted by the Standard Model, a peak was discovered that could not be explained by the Standard Model. But adding a Higgs Boson with a mass of about 125 GeV allowed the data to be described by the simulation. The statistical significance of the description exceeded 5 sigma and the signal qualified for the discovery of a Higgs Boson at 125 GeV. Simulations played a crucial role in this discovery.
 
+\section{COMPUTING FOR THE CMS EXPERIMENT}
+\label{sec:computing}
+
 \section{The FUTURE: HIGH-LUMINOSITY LHC}
 \label{sec:hl-lhc}
 
+The LHC is currently in its 2nd running period. Simulations of impact of the radiation background produced by operating the machine and comparisons to actual degradation of detectors and equipment show that by 2023 many components will reach their end-of-life. Combined with the plan to increase the instantaneous luminosity for the running period 2026-2037, a measure of how well the beams are focussed and precicely brought to collision, the LHC and the experiments started upgrade programs for the High-Luminosity LHC (HL-LHC). The higher instantaneous luminosity will allow to increase the physics reach significantly, but also will increase the number of parasitic collisions (PileUp) significantly as well, which increased the demands on the detector systems to realize the increased physics potential. 
 
+This results in a large optimization problem, where improvements to the detector systems impact the physics results and the optimization of the physics results require corresponding detector performance. Simulations play a crucial role to optimize detector and physics performance under HL-LHC running conditions. 
+
+\section{Summary}
+\label{sec:summary}
+
+Simulations play a crucial role in particle physics. They incorporate the theoretical predictions of the Standard Model and also new theories not yet proven, as well as using Monte Carlo techniques to simulate effects that are not empirically understood. Simulated events are indispensable for the recording of events in developing and optimizing the trigger, in extracting physics results and maybe discoveries, and to plan and optimize updates. All these simulations need a lot of computing resources and it will be crucial for the future success of the LHC and HL-LHC to enable a successful physics harvest.
 
 
 \section*{ACKNOWLEDGMENTS}
