pictures, drawings and corrections

--- a/wsc16paper.bib
+++ b/wsc16paper.bib
@@ -277,3 +277,132 @@ address = {Los Alamitos, CA, USA},
   year={2012},
   abstract={The CernVM File System (CernVM-FS) provides a scalable, reliable and close to zero-maintenance software distribution service. It was developed to assist HEP collaborations to deploy their software on the worldwide-distributed computing infrastructure used to run their data processing applications. CernVM-FS is deployed on a wide range of computing resources, ranging from powerful worker nodes at Tier 1 grid sites to simple virtual appliances running on volunteer computers. We present a new approach to stage updates and changes into the file system, which aims to reduce the delay in distributing a software release to less than an hour. In addition, it significantly reduces the complexity with respect to both required capabilities of the master storage as well as installation and maintenance. Furthermore, we will discuss new requirements for additional features on the client side that have arisen from HEP community feedback.}
 }
+
+@book{griffiths2008introduction,
+  title={Introduction to Elementary Particles, 2nd Revised Edition},
+  author={Griffiths, D.},
+  isbn={978-3-527-40601-2},
+  series={Physics textbook},
+  url={https://books.google.ch/books?id=w9Dz56myXm8C},
+  year={2008},
+  publisher={Wiley}
+}
+@book{peskin1995introduction,
+  title={An Introduction to Quantum Field Theory},
+  author={Peskin, M.E. and Schroeder, D.V.},
+  isbn={9-78-020-150397-5},
+  lccn={89027170},
+  series={Advanced book classics},
+  url={https://books.google.ch/books?id=i35LALN0GosC},
+  year={1995},
+  publisher={Addison-Wesley Publishing Company}
+}
+@book{feynman1990q,
+  title={Q E D: },
+  author={Feynman, R.P.},
+  isbn={9780140125054},
+  series={Penguin Books},
+  url={https://books.google.ch/books?id=2X-3QgAACAAJ},
+  year={1990},
+  publisher={Penguin}
+}
+@article{Khachatryan:2015kea,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Measurement of the Zγ Production Cross Section in pp
+                        Collisions at 8 TeV and Search for Anomalous Triple Gauge
+                        Boson Couplings}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "04",
+      year           = "2015",
+      pages          = "164",
+      doi            = "10.1007/JHEP04(2015)164",
+      eprint         = "1502.05664",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SMP-13-014, CERN-PH-EP-2014-303",
+      SLACcitation   = "%%CITATION = ARXIV:1502.05664;%%"
+}
+@article{PhysRevD.10.2445,
+  title = {Confinement of quarks},
+  author = {Wilson, Kenneth G.},
+  journal = {Phys. Rev. D},
+  volume = {10},
+  issue = {8},
+  pages = {2445--2459},
+  numpages = {0},
+  year = {1974},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.10.2445},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.10.2445}
+}
+@ARTICLE{1610988, 
+author={J. Allison and K. Amako and J. Apostolakis and H. Araujo and P. Arce Dubois and M. Asai and G. Barrand and R. Capra and S. Chauvie and R. Chytracek and G. A. P. Cirrone and G. Cooperman and G. Cosmo and G. Cuttone and G. G. Daquino and M. Donszelmann and M. Dressel and G. Folger and F. Foppiano and J. Generowicz and V. Grichine and S. Guatelli and P. Gumplinger and A. Heikkinen and I. Hrivnacova and A. Howard and S. Incerti and V. Ivanchenko and T. Johnson and F. Jones and T. Koi and R. Kokoulin and M. Kossov and H. Kurashige and V. Lara and S. Larsson and F. Lei and O. Link and F. Longo and M. Maire and A. Mantero and B. Mascialino and I. McLaren and P. Mendez Lorenzo and K. Minamimoto and K. Murakami and P. Nieminen and L. Pandola and S. Parlati and L. Peralta and J. Perl and A. Pfeiffer and M. G. Pia and A. Ribon and P. Rodrigues and G. Russo and S. Sadilov and G. Santin and T. Sasaki and D. Smith and N. Starkov and S. Tanaka and E. Tcherniaev and B. Tome and A. Trindade and P. Truscott and L. Urban and M. Verderi and A. Walkden and J. P. Wellisch and D. C. Williams and D. Wright and H. Yoshida}, 
+journal={IEEE Transactions on Nuclear Science}, 
+title={Geant4 developments and applications}, 
+year={2006}, 
+volume={53}, 
+number={1}, 
+pages={270-278}, 
+keywords={physics computing;Geant4;astrophysics;high energy physics;performance optimization;space science;Application software;Astrophysics;Kernel;Large Hadron Collider;Medical simulation;Object oriented modeling;Physics;Production;Protection;Software tools;Electromagnetic interactions;hadronic interactions;object-oriented technology;particle interactions;physics validation;simulation}, 
+doi={10.1109/TNS.2006.869826}, 
+ISSN={0018-9499}, 
+month={Feb},}
+@article{Agostinelli2003250,
+title = "Geant4—a simulation toolkit ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "506",
+number = "3",
+pages = "250 - 303",
+year = "2003",
+note = "",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/S0168-9002(03)01368-8",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900203013688",
+author = "S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. Araujo and P. Arce and M. Asai and D. Axen and S. Banerjee and G. Barrand and F. Behner and L. Bellagamba and J. Boudreau and L. Broglia and A. Brunengo and H. Burkhardt and S. Chauvie and J. Chuma and R. Chytracek and G. Cooperman and G. Cosmo and P. Degtyarenko and A. Dell'Acqua and G. Depaola and D. Dietrich and R. Enami and A. Feliciello and C. Ferguson and H. Fesefeldt and G. Folger and F. Foppiano and A. Forti and S. Garelli and S. Giani and R. Giannitrapani and D. Gibin and J.J. Gómez Cadenas and I. González and G. Gracia Abril and G. Greeniaus and W. Greiner and V. Grichine and A. Grossheim and S. Guatelli and P. Gumplinger and R. Hamatsu and K. Hashimoto and H. Hasui and A. Heikkinen and A. Howard and V. Ivanchenko and A. Johnson and F.W. Jones and J. Kallenbach and N. Kanaya and M. Kawabata and Y. Kawabata and M. Kawaguti and S. Kelner and P. Kent and A. Kimura and T. Kodama and R. Kokoulin and M. Kossov and H. Kurashige and E. Lamanna and T. Lampén and V. Lara and V. Lefebure and F. Lei and M. Liendl and W. Lockman and F. Longo and S. Magni and M. Maire and E. Medernach and K. Minamimoto and P. Mora de Freitas and Y. Morita and K. Murakami and M. Nagamatu and R. Nartallo and P. Nieminen and T. Nishimura and K. Ohtsubo and M. Okamura and S. O'Neale and Y. Oohata and K. Paech and J. Perl and A. Pfeiffer and M.G. Pia and F. Ranjard and A. Rybin and S. Sadilov and E. Di Salvo and G. Santin and T. Sasaki and N. Savvas and Y. Sawada and S. Scherer and S. Sei and V. Sirotenko and D. Smith and N. Starkov and H. Stoecker and J. Sulkimo and M. Takahata and S. Tanaka and E. Tcherniaev and E. Safai Tehrani and M. Tropeano and P. Truscott and H. Uno and L. Urban and P. Urban and M. Verderi and A. Walkden and W. Wander and H. Weber and J.P. Wellisch and T. Wenaus and D.C. Williams and D. Wright and T. Yamada and H. Yoshida and D. Zschiesche",
+keywords = "Simulation",
+keywords = "Particle interactions",
+keywords = "Geometrical modelling",
+keywords = "Software engineering",
+keywords = "Object-oriented technology",
+keywords = "Distributed software development "
+}
+@article{cms_detector,
+      author         = "Chatrchyan, S. and others",
+      title          = "{The CMS experiment at the CERN LHC}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JINST",
+      volume         = "3",
+      pages          = "S08004",
+      doi            = "10.1088/1748-0221/3/08/S08004",
+      year           = "2008",
+      SLACcitation   = "%%CITATION = JINST,3,S08004;%%",
+}
+@article{cms_higgs_discovery, 
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Observation of a new boson at a mass of 125 GeV with the
+                        CMS experiment at the LHC}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B716",
+      pages          = "30-61",
+      doi            = "10.1016/j.physletb.2012.08.021",
+      year           = "2012",
+      eprint         = "1207.7235",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-12-028, CERN-PH-EP-2012-220",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7235;%%",
+}
+@article{Adelman2013raa,
+      author         = "Adelman, J. and others",
+      title          = "{CMS computing operations during run 1}",
+      collaboration  = "CMS collaboration",
+      journal        = "J.Phys.Conf.Ser.",
+      volume         = "513",
+      pages          = "032040",
+      doi            = "10.1088/1742-6596/513/3/032040",
+      year           = "2014",
+      SLACcitation   = "%%CITATION = 00462,513,032040;%%",
+}
